Complete login system with correct license key format

--- a/success.html
+++ b/success.html
@@ -266,7 +266,7 @@
         </div>
 
         <div class="buttons">
-            <a href="/analysis" class="btn primary">🔍 Start Analyzing Stocks</a>
+            <a href="/login" class="btn primary">🔍 Start Analyzing Stocks</a>
             <a href="/" class="btn secondary">🏠 Back to Home</a>
         </div>
 
