--- a/dashboard.html
+++ b/dashboard.html
@@ -1542,6 +1542,13 @@
             const paidFriends = userData.totalPaidReferrals;
             const moneySaved = userData.totalEarnedMonths * 9.99; // NEW PRICING
 
+            // 👑 ПРОВЕРКА ADMIN РОЛИ
+            const userRole = localStorage.getItem('pp_user_role') || 'client';
+            if (userRole === 'admin') {
+                document.getElementById('user-greeting').innerHTML = 
+                    '👑 Admin Mode Active <span style="color: #ff6b35; font-size: 12px;">(System Administrator)</span>';
+            }
+
             // Обновляем основные счетчики
             document.getElementById('referral-link').textContent = userData.referralLink;
             document.getElementById('free-months-count').textContent = freeMonths;
