Add royal admin interface - golden crown avatar, admin mode greeting, and time-based welcome messages

--- a/analysis.html
+++ b/analysis.html
@@ -1667,7 +1667,7 @@
         <h4 style="color: #ffd700; margin-bottom: 15px;">Diamond Rating Scale:</h4>
         <div style="text-align: left; color: #95a5a6; font-size: 14px; line-height: 1.8;">
             💎💎💎💎💎 ABSOLUTE DIAMOND (45-50 pts)<br>
-            💎💎💎💎⭐ STRONG BUY (40-44 pts)<br>
+            💎💎💎💎⭐ STRONG DIAMOND (40-44 pts)<br>
             💎💎💎⭐⭐ QUALITY STOCK (35-39 pts)<br>
             💎💎⭐⭐⭐ MIXED SIGNALS (25-34 pts) ← Current<br>
             💎⭐⭐⭐⭐ CAUTION (15-24 pts)<br>
