--- a/cancel.html
+++ b/cancel.html
@@ -353,7 +353,7 @@
         </div>
 
         <div class="footer">
-            <p>© 2025 ProfitPal. A product of Denava OÜ. All rights reserved.</p>
+            <p>© 2025 ProfitPal. A product of Denava LLC. All rights reserved.</p>
         </div>
     </div>
 
