--- a/success.html
+++ b/success.html
@@ -275,7 +275,7 @@
         </div>
 
         <div class="footer">
-            <p>© 2025 ProfitPal. A product of Denava OÜ. All rights reserved.</p>
+            <p>© 2025 ProfitPal. A product of Denava LLC. All rights reserved.</p>
         </div>
     </div>
 
